--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -8,6 +8,12 @@ svg {
     left: 0;
     width: 100%;
     height: 90%;
-   
+    path {
+        transition: 0.2s;
+
+        // &:hover {
+        //     fill: red;
+        // }
+    }
 }
 
