Autocomplete search functionality finished, sidebar open and close finished.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div id="angular-app">
+    <app-search></app-search>
     <app-map></app-map>
+    <app-bar></app-bar>
+
 </div>
 
 <router-outlet></router-outlet>
