--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html, body, app-root, #angular-app {
+    height: 100%;
+}
+
+html {
+    overflow-x: hidden;
+}
+
+app-map {
+    display: block;
+    border: 1px solid #ccc;
+    padding: 2rem;
+    padding-left: 0;
+    // position: absolute;
+    // top: 5%;
+    // left: 0;
+    width: 100%;
+    height: 90%;
+}
+
+
+.dynamic-button {
+    background-color: white;
+    padding: 0.25rem;
+    outline: none;
+    appearance: none;
+    border: 1px solid black;
+    width: 100%;
+}
