--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="angular-app">
+<div id="angular-app" routerLink="/">
     <app-search></app-search>
     <app-map></app-map>
     <app-bar></app-bar>
